# protoaudit

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
docs/: ANALYZERS.md  ARCHITECTURE.md  CASE_STUDIES.md  CONFIGURATION.md  MAPPING_REPORT_PHASE4_2.md  PLUGINS.md  QUICKSTART.md  REPORTING.md  RULES_AND_PLUGINS.md  TOOLKIT.md
examples/: config.plugins.json  config.strict.json  demo_walkthrough.md
examples/crypto/: sample_crypto.txt
examples/protocol/: sample_protocol.txt
examples/protocol/cached_handshake_material_case_study/: README.md  protocol_report.json  protocol_report.md  session.txt
examples/protocol/retry_loop_case_study/: README.md  protocol_report.json  protocol_report.md  session.txt
examples/protocol/structured_pairing_retry_case_study/: README.md  protocol_report.json  protocol_report.md  script.json
examples/transcripts/: sample_transcript.txt
src/protoaudit/: __init__.py  cli.py
src/protoaudit/analyzers/: __init__.py  crypto.py  protocol.py  randomness.py
src/protoaudit/core/: __init__.py  config.py  correlation.py  engine.py  io.py  models.py  plugin_api.py  plugin_loader.py  rule_engine.py
src/protoaudit/plugins/: __init__.py  finding_tags.py  json_lines.py
src/protoaudit/reporting/: __init__.py  renderers.py
tests/: test_additional_case_studies.py  test_case_study_example.py  test_cli.py  test_config.py  test_correlation.py  test_crypto.py  test_io.py  test_plugins.py  test_protocol.py  test_randomness.py  test_rule_engine.py  test_toolkit.py
(+9 files in other folders)
