[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protocol-analysis-framework"
version = "0.1.0"
description = "Modular defensive protocol, crypto, and randomness analysis framework with practical toolkit utilities."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Paul Kriukov" }
]
keywords = ["protocol-analysis", "security", "crypto", "randomness", "fuzzing", "defensive"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10"
]

[project.scripts]
protoaudit = "protoaudit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.entry-points."protoaudit.plugins"]
json-lines = "protoaudit.plugins.json_lines:JsonLinesPlugin"
finding-tags = "protoaudit.plugins.finding_tags:FindingTagPlugin"
